# eaclaw-eye

./: CLAUDE.md  Cargo.toml  MEASURING.md  README.md  build.sh
crates/eye-core/: Cargo.toml  build.rs
crates/eye-core/benches/: vision_bench.rs
crates/eye-core/src/: eye.rs  lib.rs
crates/eye-core/src/vision/: accel.rs  capture.rs  dedup.rs  frame.rs  inference.rs  mod.rs  model.rs  motion.rs  pipeline.rs  rules.rs  v4l2.rs
docs/: session1.md
docs/plans/: 2026-03-07-eaclaw-eye-design.md  2026-03-07-eaclaw-eye-implementation.md
docs/superpowers/specs/: 2026-03-22-ea-kernel-build-integration-design.md
eye-cli/: Cargo.toml
eye-cli/src/: main.rs
kernels/: inference.ea  inference.ea.json  motion.ea  motion.ea.json  normalize.ea  normalize.ea.json
training/: train.py
