[workspace]
members = ["crates/eye-core", "eye-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
eye-core = { path = "crates/eye-core" }
eaclaw-core = { path = "../eaclaw/crates/eaclaw-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
