[package]
name = "eaclaw-eye"
version.workspace = true
edition.workspace = true

[[bin]]
name = "eaclaw-eye"
path = "src/main.rs"

[features]
default = []
v4l2 = ["eye-core/v4l2"]

[dependencies]
eye-core.workspace = true
eaclaw-core.workspace = true
tokio.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
