[package]
name = "eye-core"
version.workspace = true
edition.workspace = true

[features]
default = []
v4l2 = ["v4l"]
ea = []

[dependencies]
eaclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.v4l]
version = "0.14"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vision_bench"
harness = false
